fixes spacing at bottom of chat

--- a/public/styles.css
+++ b/public/styles.css
@@ -12,14 +12,14 @@ body {
     background: #EEE;
 }
 
-section {
+section.chatWrapper {
     position: relative;
     margin-top: 15px;
     width: 80%;
     min-height: 400px;
     height: 80%;
     margin: auto;
-    background: white;
+    background: #FFF;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
@@ -115,6 +115,7 @@ input.usernameInput {
 
 .chatArea {
     height: 100%;
+    padding-bottom: 45px;
 }
 
 
